--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim" crossorigin="anonymous"></script>
     </head>
 
 
@@ -14,8 +16,38 @@
 
 
     <body style="height: 100%; margin: 0 auto; align - items: center; justify - content: center;width: 100%;">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">TRA</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-<body>
+        <li class="nav-item">
+          <a class="nav-link" href="./index.html">Research Trajectory</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="./3d_bubble_chart.html">Bubble Chart</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="./young_scholars.html">Young Scholars</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="./middle_aged_scholars.html">Middle - Aged Scholars</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="./senior_scholars.html">Senior scholars</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
         <div id="container" style="height: 100%"></div>
         <div style="margin:auto;top:20px;left:150px;right:50px;bottom:50px;width:70%">
 
