--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="./young_scholars.html">Young Scholars</a>
+          <a class="nav-link" href="./Three-dimensional diagram of Young scholars.html">Young Scholars</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="./middle_aged_scholars.html">Middle - Aged Scholars</a>
+          <a class="nav-link" href="./Three-dimensional diagram of Middle-aged scholars.html">Middle - Aged Scholars</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="./senior_scholars.html">Senior scholars</a>
+          <a class="nav-link" href="./Three-dimensional diagram of Senior scholars.html">Senior scholars</a>
         </li>
       </ul>
     </div>
